tests/snapshots/run_wpt_conformance__litert_conv2d_float16_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D both input and filter constant tensors default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[1, 1, 3, 3] @bytes([22, 54, 57, 56, 6, 51, 223, 53, 112, 53, 184, 54, 23, 54, 57, 50, 141, 56]);
    operand_1: f16[1, 1, 5, 5] @bytes([230, 56, 22, 59, 96, 48, 132, 56, 44, 59, 227, 53, 115, 57, 35, 42, 86, 53, 93, 50, 150, 54, 20, 45, 214, 54, 73, 56, 187, 56, 140, 52, 163, 54, 227, 38, 203, 53, 245, 59, 153, 44, 208, 47, 189, 58, 67, 55, 228, 50]);
  }

  nodes {
    [conv2dOutput] = conv2d(operand_1, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
