tests/snapshots/run_wpt_conformance__litert_conv2d_float16_4D_both_input_and_filter_non-constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D both input and filter non-constant tensors default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dFilter: f16[1, 1, 3, 3];
    conv2dInput: f16[1, 1, 5, 5];
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, conv2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
